style: Refactor header button styles and layout for improved accessibility and responsiveness

--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
     <div class="container no-print-styles">
         <header>
             <!-- bouton switch langue -->
-            <button id="lang-btn" class="no-print" title="Switch language"
-                style="position: absolute; top: 15px; left: 15px; padding: 6px 12px; cursor: pointer;">
+            <button id="lang-btn" class="no-print" title="Switch language">
                 FR
             </button>
-            <button id="print-pdf-btn" class="no-print" title="Print or Save as PDF"
-                style="float: right; padding: 8px 15px; cursor: pointer; font-size: 0.9em;">
+            <button id="print-pdf-btn" class="no-print" title="Print or Save as PDF">
                 📄 Print / Save PDF
             </button>
             <h1 id="name"></h1>
